[package]
name = "twguessr"
version = "0.0.1"
edition = "2021"

[dependencies]
image = "0.24.9"
poise = "0.6.1"
pollster = "0.4.0"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
twgpu = { git = "https://gitlab.com/Patiga/twgpu.git" }
twgpu-tools = { git = "https://gitlab.com/Patiga/twgpu.git" }
twmap = "0.12.4"
vek = { version = "0.16.1", default-features = false, features = ["bytemuck", "az", "uv", "rgba", "std"] }
wgpu = "22.1.0"